<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_MAIN" Id="{e66c2fe5-8e74-49a9-9562-60ceddf31bb1}">
    <Declaration><![CDATA[VAR_GLOBAL
	// ON/OFF Valves
	{attribute 'pytmc' := 'pv: UED:SDS:SPR:A'}
	{attribute 'TcLinkTo' := 	'.q_xDO1 := TIID^Device 1 (EtherCAT)^Box 18 (EP9128-0021)^BR Valves (EP2338-0001)^Channel 9^Output;
                          		 .q_xDO2 := TIID^Device 1 (EtherCAT)^Box 18 (EP9128-0021)^BR Valves (EP2338-0001)^Channel 10^Output;	
	'}
	SolenoidPairA : FB_SolenoidPair;
	
	// Purge Valves
	{attribute 'pytmc' := 'pv: UED:SDS:PURGE:A'}
	{attribute 'TcLinkTo' := 	'PURGE_VRC_01_CTL	:= TIID^Device 1 (EtherCAT)^Box 18 (EP9128-0021)^BR Valves (EP2338-0001)^Channel 11^Output'}
	PURGE_VRC_01_CTL AT%Q* : BOOL;
	{attribute 'pytmc' := 'pv: UED:SDS:PURGE:B'}
	{attribute 'TcLinkTo' := 	'PURGE_VRC_02_CTL	:= TIID^Device 1 (EtherCAT)^Box 18 (EP9128-0021)^BR Valves (EP2338-0001)^Channel 12^Output'}
    PURGE_VRC_02_CTL AT%Q* : BOOL;
	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>