<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MAIN" Id="{a8605b09-14c1-42af-ad44-9e0837ea999a}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	// 4 Port Valve
	{attribute 'pytmc' := 'pv: UED:SDS:VICI:01'}
	{attribute 'TcLinkTo' := '.fbNporValve.stViciSerial.stComIn.Status := TIID^Device 1 (EtherCAT)^Box 18 (EP9128-0021)^Term 24 (EP9128-2021)^4PortVICI Serial (EP6002-0002)^COM TxPDO-Map Inputs Channel 2^Status;
                          	  .fbNporValve.stViciSerial.stComOut.Ctrl := TIID^Device 1 (EtherCAT)^Box 18 (EP9128-0021)^Term 24 (EP9128-2021)^4PortVICI Serial (EP6002-0002)^COM RxPDO-Map Outputs Channel 2^Ctrl
	'}
	fbValve : FB_4PortViciValve;
	
	// ON/OFF Valves
	{attribute 'pytmc' := 'pv: UED:SDS:SPR:A'}
	{attribute 'TcLinkTo' := 	'.q_xDO1 := TIID^Device 1 (EtherCAT)^Box 18 (EP9128-0021)^BR Valves (EP2338-0001)^Channel 9^Output;
                          		 .q_xDO2 := TIID^Device 1 (EtherCAT)^Box 18 (EP9128-0021)^BR Valves (EP2338-0001)^Channel 10^Output;	
	'}
	SolenoidPairA : FB_SolenoidPair;
	
	// Purge Valves
	{attribute 'pytmc' := 'pv: UED:SDS:PURGE:A'}
	{attribute 'TcLinkTo' := 	'PURGE_VRC_01_CTL	:= TIID^Device 1 (EtherCAT)^Box 18 (EP9128-0021)^BR Valves (EP2338-0001)^Channel 11^Output'}
	PURGE_VRC_01_CTL AT%Q* : BOOL;
	{attribute 'pytmc' := 'pv: UED:SDS:PURGE:B'}
	{attribute 'TcLinkTo' := 	'PURGE_VRC_02_CTL	:= TIID^Device 1 (EtherCAT)^Box 18 (EP9128-0021)^BR Valves (EP2338-0001)^Channel 12^Output'}
    PURGE_VRC_02_CTL AT%Q* : BOOL;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[PRG_RCC();
SolenoidPairA();
fbValve(iAdress:=1);

]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>